--- a/app-uniformes-multi.html
+++ b/app-uniformes-multi.html
@@ -94,7 +94,7 @@
       border-radius: var(--radius-card);
       padding: 12px 16px;
       box-shadow: var(--shadow-soft);
-      border: 1px solid rgba(148,163,184,0.5);
+      border: 1.5px solid rgba(148,163,184,0.6);
       position: relative;
       overflow: hidden;
     }
@@ -399,6 +399,7 @@
             </div>
             <button class="btn secondary" onclick="cargarPedidos()">Actualizar</button>
           </div>
+          <div id="avisosRol" class="small-text"></div>
           <table>
             <thead>
               <tr>
@@ -490,6 +491,14 @@
           <h3>Tallas y cantidades</h3>
           <label>Describe tallas y cantidades</label>
           <textarea id="tallasTexto" placeholder="Ej. 10 pzas talla 6, 15 pzas talla 8, 8 pzas talla 10..."></textarea>
+
+          <h3>Nota para el cliente</h3>
+          <label>Condiciones del pedido / información para el cliente</label>
+          <textarea id="condicionesCliente" placeholder="Ej. Tiempo de entrega, forma de pago, política de cambios, horario de entrega, etc."></textarea>
+          <button class="btn secondary" id="btnNotaCliente" onclick="exportarNotaCliente()">Generar nota para el cliente</button>
+          <div class="small-text">
+            Se genera una nota imprimible / PDF con los datos del pedido y las condiciones para enviar al cliente.
+          </div>
 
           <h3>Áreas de trabajo</h3>
           <div class="row">
@@ -654,6 +663,7 @@
         document.getElementById("descripcionGeneral"),
         document.getElementById("fechaEntrega"),
         document.getElementById("tallasTexto"),
+        document.getElementById("condicionesCliente"),
       ];
       const campoEstado = document.getElementById("pedidoEstado");
       const comprasNotas = document.getElementById("comprasNotas");
@@ -725,6 +735,54 @@
       const puedeSubirImagen = esAdmin() || esVentas();
       if (fileInput) fileInput.disabled = !puedeSubirImagen;
       if (btnSubirImg) btnSubirImg.disabled = !puedeSubirImagen;
+
+      const btnNota = document.getElementById("btnNotaCliente");
+      if (btnNota) btnNota.disabled = !(esAdmin() || esVentas());
+
+      // Ocultar datos de cliente (nombre/tel) para compras, corte y confección
+      const pedidoIdActual = document.getElementById("pedidoId")?.value;
+      const inputNombre = document.getElementById("clienteNombre");
+      const inputTel = document.getElementById("clienteTelefono");
+      const puedeVerCliente = esAdmin() || esVentas();
+
+      if (pedidoIdActual) {
+        if (!puedeVerCliente) {
+          if (inputNombre) {
+            if (!inputNombre.dataset.realValor) {
+              inputNombre.dataset.realValor = inputNombre.value;
+            }
+            inputNombre.value = "Oculto";
+            inputNombre.readOnly = true;
+          }
+          if (inputTel) {
+            if (!inputTel.dataset.realValor) {
+              inputTel.dataset.realValor = inputTel.value;
+            }
+            inputTel.value = "Oculto";
+            inputTel.readOnly = true;
+          }
+        } else {
+          if (inputNombre && inputNombre.dataset.realValor !== undefined) {
+            inputNombre.value = inputNombre.dataset.realValor;
+            delete inputNombre.dataset.realValor;
+            inputNombre.readOnly = false;
+          }
+          if (inputTel && inputTel.dataset.realValor !== undefined) {
+            inputTel.value = inputTel.dataset.realValor;
+            delete inputTel.dataset.realValor;
+            inputTel.readOnly = false;
+          }
+        }
+      } else {
+        if (inputNombre && puedeVerCliente) {
+          if (inputNombre.dataset.realValor !== undefined) delete inputNombre.dataset.realValor;
+          inputNombre.readOnly = false;
+        }
+        if (inputTel && puedeVerCliente) {
+          if (inputTel.dataset.realValor !== undefined) delete inputTel.dataset.realValor;
+          inputTel.readOnly = false;
+        }
+      }
     }
 
     async function login() {
@@ -974,6 +1032,31 @@
       return true;
     }
 
+    function actualizarAvisosRol() {
+      const aviso = document.getElementById("avisosRol");
+      if (!aviso) return;
+      const rol = getRol();
+      if (!rol) { aviso.textContent = ""; return; }
+
+      const pendientes = pedidos.filter(p => filtraPedidoPorRol(p) && p.estado !== "entregado").length;
+      let texto = "";
+
+      if (esAdmin()) {
+        texto = `Admin: hay ${pendientes} pedidos activos en el sistema.`;
+      } else if (esVentas()) {
+        texto = `Ventas: tienes ${pendientes} pedidos activos entre nuevo y en proceso.`;
+      } else if (esCompras()) {
+        texto = `Compras: tienes ${pendientes} pedidos en nuevo o proceso para revisar materiales y gastos.`;
+      } else if (esCorte()) {
+        texto = `Corte: tienes ${pendientes} pedidos en proceso para trazar y cortar.`;
+      } else if (esConfeccion()) {
+        texto = `Confección: tienes ${pendientes} pedidos en proceso para coser y terminar.`;
+      } else {
+        texto = "";
+      }
+      aviso.textContent = texto;
+    }
+
     function renderTablaPedidos() {
       const tbody = document.getElementById("tablaPedidosBody");
       tbody.innerHTML = "";
@@ -996,18 +1079,23 @@
 
       filtrados.sort((a,b) => (b.id || 0) - (a.id || 0));
 
+      const puedeVerClienteCol = esAdmin() || esVentas();
+
       for (const p of filtrados) {
         const tr = document.createElement("tr");
         tr.onclick = () => cargarFormulario(p.id);
+        const nombreCliente = puedeVerClienteCol ? (p.clienteNombre || "") : "Oculto";
         tr.innerHTML = `
           <td>${p.folio || "-"}</td>
-          <td>${p.clienteNombre || ""}</td>
+          <td>${nombreCliente}</td>
           <td>${p.clienteEscuela || ""}</td>
           <td>${p.fechaEntrega || ""}</td>
           <td>${statusPill(p.estado)}</td>
         `;
         tbody.appendChild(tr);
       }
+
+      actualizarAvisosRol();
     }
 
     function limpiarFormulario() {
@@ -1021,6 +1109,7 @@
       document.getElementById("fechaEntrega").value = "";
       document.getElementById("pedidoEstado").value = "nuevo";
       document.getElementById("tallasTexto").value = "";
+      document.getElementById("condicionesCliente").value = "";
       document.getElementById("comprasNotas").value = "";
       document.getElementById("corteNotas").value = "";
       document.getElementById("confeccionNotas").value = "";
@@ -1038,9 +1127,8 @@
       if (lista) lista.innerHTML = "";
 
       const btnEliminar = document.getElementById("btnEliminar");
-      if (btnEliminar) {
-        btnEliminar.disabled = true;
-      }
+      if (btnEliminar) btnEliminar.disabled = true;
+
       document.getElementById("infoExtra").textContent = "";
       document.getElementById("tituloFormulario").textContent = "Nuevo pedido";
       applyRoleUI();
@@ -1058,11 +1146,17 @@
       const idTexto = document.getElementById("pedidoId").value;
       const id = idTexto ? parseInt(idTexto, 10) : null;
 
+      const inputNombre = document.getElementById("clienteNombre");
+      const inputTel = document.getElementById("clienteTelefono");
+
+      const nombreReal = inputNombre?.dataset.realValor || inputNombre?.value.trim() || "";
+      const telReal = inputTel?.dataset.realValor || inputTel?.value.trim() || "";
+
       return {
         id: id ?? undefined,
         folio: null,
-        clienteNombre: document.getElementById("clienteNombre").value.trim(),
-        clienteTelefono: document.getElementById("clienteTelefono").value.trim(),
+        clienteNombre: nombreReal,
+        clienteTelefono: telReal,
         clienteEscuela: document.getElementById("clienteEscuela").value.trim(),
         prendaTipo: document.getElementById("prendaTipo").value.trim(),
         prendaModelo: document.getElementById("prendaModelo").value.trim(),
@@ -1070,6 +1164,7 @@
         fechaEntrega: document.getElementById("fechaEntrega").value,
         estado: document.getElementById("pedidoEstado").value,
         tallasTexto: document.getElementById("tallasTexto").value.trim(),
+        condicionesCliente: document.getElementById("condicionesCliente").value.trim(),
         comprasNotas: document.getElementById("comprasNotas").value.trim(),
         corteNotas: document.getElementById("corteNotas").value.trim(),
         confeccionNotas: document.getElementById("confeccionNotas").value.trim(),
@@ -1162,8 +1257,18 @@
       if (!p) return;
 
       document.getElementById("pedidoId").value = p.id;
-      document.getElementById("clienteNombre").value = p.clienteNombre || "";
-      document.getElementById("clienteTelefono").value = p.clienteTelefono || "";
+      const inputNombre = document.getElementById("clienteNombre");
+      const inputTel = document.getElementById("clienteTelefono");
+
+      if (inputNombre) {
+        inputNombre.dataset.realValor = p.clienteNombre || "";
+        inputNombre.value = p.clienteNombre || "";
+      }
+      if (inputTel) {
+        inputTel.dataset.realValor = p.clienteTelefono || "";
+        inputTel.value = p.clienteTelefono || "";
+      }
+
       document.getElementById("clienteEscuela").value = p.clienteEscuela || "";
       document.getElementById("prendaTipo").value = p.prendaTipo || "";
       document.getElementById("prendaModelo").value = p.prendaModelo || "";
@@ -1171,6 +1276,7 @@
       document.getElementById("fechaEntrega").value = p.fechaEntrega || "";
       document.getElementById("pedidoEstado").value = p.estado || "nuevo";
       document.getElementById("tallasTexto").value = p.tallasTexto || "";
+      document.getElementById("condicionesCliente").value = p.condicionesCliente || "";
       document.getElementById("comprasNotas").value = p.comprasNotas || "";
       document.getElementById("corteNotas").value = p.corteNotas || "";
       document.getElementById("confeccionNotas").value = p.confeccionNotas || "";
@@ -1352,6 +1458,234 @@
         console.error(e);
         alert("Error al conectarse al servidor para generar el respaldo.");
       }
+    }
+
+    function exportarNotaCliente() {
+      if (!(esAdmin() || esVentas())) {
+        alert("Solo ventas o admin pueden generar la nota para el cliente.");
+        return;
+      }
+
+      const idTexto = document.getElementById("pedidoId").value;
+      if (!idTexto) {
+        alert("Primero selecciona o guarda un pedido.");
+        return;
+      }
+
+      const id = parseInt(idTexto, 10);
+      const pedido = pedidos.find(p => p.id === id) || {};
+
+      const inputNombre = document.getElementById("clienteNombre");
+      const inputTel = document.getElementById("clienteTelefono");
+
+      const clienteNombre = (inputNombre?.dataset.realValor || inputNombre?.value || "").trim();
+      const clienteTelefono = (inputTel?.dataset.realValor || inputTel?.value || "").trim();
+
+      const clienteEscuela = document.getElementById("clienteEscuela").value.trim();
+      const prendaTipo = document.getElementById("prendaTipo").value.trim();
+      const prendaModelo = document.getElementById("prendaModelo").value.trim();
+      const descripcionGeneral = document.getElementById("descripcionGeneral").value.trim();
+      const tallasTexto = document.getElementById("tallasTexto").value.trim();
+      const condiciones = document.getElementById("condicionesCliente").value.trim();
+      const precioTotal = parseFloat(document.getElementById("precioTotal").value || "0");
+      const anticipo = parseFloat(document.getElementById("anticipo").value || "0");
+      const saldo = parseFloat(document.getElementById("saldo").value || "0");
+      const fechaEntrega = document.getElementById("fechaEntrega").value;
+      const folio = pedido.folio || "(sin folio)";
+
+      const hoy = new Date();
+      const fechaHoy = hoy.toLocaleDateString("es-MX");
+
+      const notaVentanas = window.open("", "_blank");
+      if (!notaVentanas) {
+        alert("El navegador bloqueó la ventana emergente. Permite pop-ups para esta página.");
+        return;
+      }
+
+      const html = `
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8" />
+<title>Nota de pedido ${folio}</title>
+<style>
+  body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    margin: 20px;
+    color: #111827;
+  }
+  .encabezado {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid #0b3a73;
+    padding-bottom: 8px;
+    margin-bottom: 12px;
+  }
+  .logo {
+    width: 80px;
+    height: 80px;
+    border-radius: 12px;
+    border: 1px solid #d1d5db;
+    overflow: hidden;
+  }
+  .logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  .titulo-empresa {
+    margin-left: 12px;
+  }
+  .titulo-empresa h1 {
+    margin: 0;
+    font-size: 20px;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+  }
+  .titulo-empresa p {
+    margin: 2px 0 0;
+    font-size: 12px;
+    color: #4b5563;
+  }
+  .folio-fecha {
+    text-align: right;
+    font-size: 12px;
+    color: #4b5563;
+  }
+  .seccion {
+    margin-bottom: 10px;
+    font-size: 13px;
+  }
+  .seccion h2 {
+    font-size: 14px;
+    margin: 0 0 4px;
+    border-bottom: 1px solid #e5e7eb;
+    padding-bottom: 2px;
+  }
+  .seccion p {
+    margin: 2px 0;
+  }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    font-size: 12px;
+    margin-top: 4px;
+  }
+  th, td {
+    border: 1px solid #e5e7eb;
+    padding: 4px 6px;
+    text-align: left;
+  }
+  th {
+    background: #e5e7eb;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 0.04em;
+  }
+  .totales {
+    margin-top: 6px;
+    font-size: 13px;
+  }
+  .condiciones {
+    margin-top: 8px;
+    font-size: 12px;
+    white-space: pre-wrap;
+  }
+  .nota-footer {
+    margin-top: 14px;
+    font-size: 11px;
+    color: #6b7280;
+    text-align: center;
+  }
+</style>
+</head>
+<body>
+  <div class="encabezado">
+    <div style="display:flex;align-items:center;">
+      <div class="logo">
+        <img src="${SERVER_BASE}/logo-bonaparte.jpg" alt="Logo Bonaparte" />
+      </div>
+      <div class="titulo-empresa">
+        <h1>UNIFORMES ESCOLARES BONAPARTE</h1>
+        <p>Nota de pedido / Cotización para el cliente</p>
+      </div>
+    </div>
+    <div class="folio-fecha">
+      <div><strong>Folio:</strong> ${folio}</div>
+      <div><strong>Fecha:</strong> ${fechaHoy}</div>
+      ${fechaEntrega ? `<div><strong>Entrega comprometida:</strong> ${fechaEntrega}</div>` : ""}
+    </div>
+  </div>
+
+  <div class="seccion">
+    <h2>Datos del cliente</h2>
+    <p><strong>Nombre:</strong> ${clienteNombre || "-"}</p>
+    <p><strong>Escuela / Empresa:</strong> ${clienteEscuela || "-"}</p>
+    <p><strong>Teléfono:</strong> ${clienteTelefono || "-"}</p>
+  </div>
+
+  <div class="seccion">
+    <h2>Descripción del pedido</h2>
+    <p><strong>Tipo de prenda:</strong> ${prendaTipo || "-"}</p>
+    <p><strong>Modelo / Referencia:</strong> ${prendaModelo || "-"}</p>
+    ${
+      descripcionGeneral
+        ? `<p><strong>Detalles generales:</strong> ${descripcionGeneral}</p>`
+        : ""
+    }
+    ${
+      tallasTexto
+        ? `<p><strong>Tallas y cantidades:</strong><br>${tallasTexto.replace(/\n/g,"<br>")}</p>`
+        : ""
+    }
+  </div>
+
+  <div class="seccion">
+    <h2>Importe</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Concepto</th>
+          <th>Importe</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Precio total del pedido</td>
+          <td>$ ${precioTotal.toFixed(2)}</td>
+        </tr>
+        <tr>
+          <td>Anticipo</td>
+          <td>$ ${anticipo.toFixed(2)}</td>
+        </tr>
+        <tr>
+          <td><strong>Saldo</strong></td>
+          <td><strong>$ ${saldo.toFixed(2)}</strong></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="seccion condiciones">
+    <h2>Condiciones del pedido</h2>
+    ${condiciones ? condiciones.replace(/\n/g,"<br>") : "Sin condiciones especificadas."}
+  </div>
+
+  <div class="nota-footer">
+    Esta nota es informativa y sirve como referencia de los acuerdos entre el cliente y Uniformes Escolares Bonaparte.
+  </div>
+
+  <script>
+    window.print();
+  </script>
+</body>
+</html>
+      `;
+
+      notaVentanas.document.open();
+      notaVentanas.document.write(html);
+      notaVentanas.document.close();
     }
 
     (function init() {
