--- a/test-imagen.html
+++ b/test-imagen.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Test subir imagen</title>
+  <meta charset="UTF-8" />
+  <title>Test subir imagen a Supabase</title>
 </head>
 <body>
-  <h1>Subir imagen de prueba</h1>
+  <h1>Subir imagen de prueba a Supabase</h1>
+  <p>
+    Selecciona una imagen y envíala. Si todo está bien, verás la URL pública y la imagen
+    directamente desde Supabase Storage.
+  </p>
+
   <form action="/test-imagen" method="post" enctype="multipart/form-data">
-    <input type="file" name="imagen" accept="image/*" required />
-    <button type="submit">Subir</button>
+    <label>
+      Elige una imagen:
+      <input type="file" name="imagen" accept="image/*" required />
+    </label>
+    <br /><br />
+    <button type="submit">Subir imagen</button>
   </form>
 </body>
 </html>
